# mathgen

./: .gitignore  pyproject.toml
src/mathgen/: __init__.py
src/mathgen/math/: evaluate.py  precise_num.py
src/mathgen/math/evalfuncs/: all.py  flags.py  iter.py  math.py  rand.py
