[tool.poetry]
name = "mathgen"
version = "0.1.0"
description = ""
authors = ["ShanThatos <shanthkoka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
